@@ -1,5 +1,9 @@
 2013-06-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Added APIService::getStopAreasByLineCode.
+	* Added Vehicule and Equipment nodes.
+
+2013-06-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>
+	* Added APIService::getStopAreasByLineCode.
 	* Bug Fix.
 
 2013-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
